--- a/package.json
+++ b/package.json
@@ -11,17 +11,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
-    "@fortawesome/fontawesome-free": "^5.7.2",
-    "axios": "^0.18.0",
-    "dateformat": "^3.0.3",
-    "firebase": "^5.9.1",
-    "is_js": "^0.9.0",
     "material-design-icons-iconfont": "^4.0.5",
     "vue": "^2.6.9",
-    "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.6.9",
-    "vuetify": "^1.5.7",
-    "vuex": "^3.1.0"
+    "vuetify": "^1.5.7"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
